feat: Implement Discogs OAuth 1.0a integration
- Added OAUTH_SETUP.md for detailed setup instructions.
- Created api/oauth.js to handle OAuth flow including request token generation, user authorization, and access token exchange.
- Developed components/AuthButton.js for user authentication interface, managing the OAuth flow and providing feedback.
- Implemented components/SearchResults.js to display search results from the Discogs API with loading states and error handling.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,12 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
+.env.production
+
+# OAuth credentials and sensitive data
+discogs-credentials.json
+oauth-tokens.json
 
 # typescript
 *.tsbuildinfo
