--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.27",
     "expo": "~54.0.12",
     "expo-constants": "~18.0.9",
     "expo-crypto": "^15.0.7",
