--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.18",
-    "@react-navigation/native-stack": "^7.3.27",
-    "expo": "~54.0.12",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
+    "expo": "54.0.13",
     "expo-constants": "~18.0.9",
     "expo-crypto": "^15.0.7",
     "expo-font": "~14.0.8",
@@ -27,7 +27,7 @@
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
     "expo-random": "^14.0.1",
-    "expo-router": "~6.0.10",
+    "expo-router": "~6.0.12",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -47,8 +47,11 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
   },
   "private": true
