feat: Integrate YouTube Data API for music track previews and enhance RecordDetailScreen with video support

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,33 @@
 # Discogs API Credentials
 # These should be set as environment variables and NOT committed to version control
 
-# Development (create a .env file in your project root - this file should be in .gitignore)
-EXPO_PUBLIC_DISCOGS_CONSUMER_KEY=JVqkNRxneBtRmwOfGXLZ
-EXPO_PUBLIC_DISCOGS_CONSUMER_SECRET=nEGBQJcvkjUOKaXlfvxwCwsaIUOyQgGH
+# Development Environment Variables Template
+# Copy this file to .env and update with your actual credentials
+# NEVER commit the .env file to version control
+
+# Personal Access Token (PREFERRED - get from https://www.discogs.com/settings/developers)
+EXPO_PUBLIC_DISCOGS_PERSONAL_TOKEN=your_discogs_personal_token_here
+
+# OAuth Credentials (for user authentication features)
+EXPO_PUBLIC_DISCOGS_CONSUMER_KEY=your_discogs_consumer_key_here
+EXPO_PUBLIC_DISCOGS_CONSUMER_SECRET=your_discogs_consumer_secret_here
+
+# YouTube Data API v3 Key (get from https://console.cloud.google.com/)
+# SECURITY: Restrict this key to your app's domains/IPs in Google Cloud Console
+# IMPORTANT: Rotate this key periodically for security
+EXPO_PUBLIC_YOUTUBE_API_KEY=your_youtube_api_key_here
+
+# Security Best Practices:
+# 1. Never commit API keys to public repositories
+# 2. Use environment variables for all sensitive data
+# 3. Restrict API keys to specific domains/IPs in provider consoles  
+# 4. Rotate API keys periodically
+# 5. Monitor API usage for suspicious activity
+# 6. In production, use secure secret managers (not .env files)
+
+# YouTube Data API v3 Credentials
+# IMPORTANT: Never hardcode this key in client code. Use backend proxy when possible.
+EXPO_PUBLIC_YOUTUBE_API_KEY=your_youtube_api_key_here
 
 # Production (set these in your deployment environment)
 # For Expo: expo build:configure
